--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -20,7 +20,7 @@
     border-color: transparent;
     background-color: $darker-blue;
 
-    .btn__icon--hover-white {
+    .btn__icon--hover-white,.btn__icon--light-blue {
       svg {
         fill: #fff;
       }
@@ -32,7 +32,7 @@
     outline: none;
     background-color: $darker-blue;
 
-    .btn__icon--hover-white {
+    .btn__icon--hover-white,.btn__icon--light-blue {
       svg {
         fill: #fff;
       }
@@ -130,6 +130,11 @@
         fill: $darker-blue;
       }
     }
+    &--light-blue {
+      svg {
+        fill: $darker-blue;
+      }
+    }
   }
   /*--- elements end ---*/
 }
@@ -181,6 +186,11 @@
       &--blue {
         svg {
           fill: #fff;
+        }
+      }
+      &--light-blue {
+        svg {
+          fill: $light-blue;
         }
       }
     }
