--- a/src/app/dashboard/components/chat/chat-message/chat-message.component.html
+++ b/src/app/dashboard/components/chat/chat-message/chat-message.component.html
@@ -4,9 +4,9 @@
   </div>
   <div class="widget__message">
     <div class="widget__message-nickname">{{ message.email | nickname}}</div>
-    <div class="widget__message-reply">
-      <div class="widget__message-nickname">nickname</div>
-      <p class="widget__message-text">message text</p>
+    <div class="widget__message-reply" *ngIf="message.messageReplyText">
+      <div class="widget__message-nickname">{{ message.messageReplyUsername }}</div>
+      <p class="widget__message-text">{{ message.messageReplyText}}</p>
     </div>
     <p class="widget__message-text">{{ message.body }}</p>
   </div>
