--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -82,10 +82,10 @@
           <div class="wrap-input widget__input widget__input--mr32">
             <!--<input class="wrap-input__input no-spinners" type="number"-->
                    <!--formControlName="quantityOf"-->
-                   <!--(input)="quantityIput($event)"-->
+                   <!--(input)="quantityInput($event)"-->
                    <!--name="quantityOf">-->
             <!--<label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>-->
-            <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityIput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
+            <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
             <div class="wrap-input__line"></div>
           </div>
 
@@ -138,10 +138,10 @@
           <div class="wrap-input widget__input widget__input--mr32">
             <!--<input class="wrap-input__input no-spinners" type="number"-->
                    <!--formControlName="quantityOf"-->
-                   <!--(input)="quantityIput($event)"-->
+                   <!--(input)="quantityInput($event)"-->
                    <!--name="quantityOf">-->
             <!--<label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>-->
-            <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityIput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
+            <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
             <div class="wrap-input__line"></div>
           </div>
           <div class="wrap-input widget__input">
@@ -203,10 +203,10 @@
         <div class="wrap-input widget__input widget__input--mr32">
           <!--<input class="wrap-input__input" type="text"-->
                  <!--formControlName="quantityOf"-->
-                 <!--(input)="quantityIput($event)"-->
+                 <!--(input)="quantityInput($event)"-->
                  <!--name="quantityOf">-->
           <!--<label class="wrap-input__label" for="" >Quantity of {{arrPairName[0]}}</label>-->
-          <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityIput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
+          <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
           <div class="wrap-input__line"></div>
         </div>
         <div class="wrap-input widget__input">
@@ -401,10 +401,10 @@
         <div class="wrap-input widget__input widget__input--mr32">
           <!--<input class="wrap-input__input" type="text"-->
                  <!--formControlName="quantityOf"-->
-                 <!--(input)="quantityIput($event)"-->
+                 <!--(input)="quantityInput($event)"-->
                  <!--name="quantityOf">-->
           <!--<label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>-->
-          <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityIput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
+          <app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
           <div class="wrap-input__line"></div>
         </div>
         <div class="wrap-input widget__input">
