order-book changes

--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -94,6 +94,7 @@
                  (input)="quantityInput($event)"
                  name="quantityOf">
           <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
+          <!--<app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>-->
           <div class="wrap-input__line"></div>
         </div>
 
@@ -103,6 +104,7 @@
                  formControlName="priceIn"
                  name="priceIn">
           <label class="wrap-input__label" for="">Price in {{arrPairName[1]}}</label>
+          <!--<app-price-input [placeholder]="'Price in ' + arrPairName[1]" (customInput)="rateInput($event)" name="priceIn" formControlName="priceIn"></app-price-input>-->
           <div class="wrap-input__line"></div>
         </div>
 
@@ -136,6 +138,7 @@
                  formControlName="limit"
                  name="limit">
           <label class="wrap-input__label" for="">Limit</label>
+          <!--<app-price-input [placeholder]="'Limit ' + arrPairName[1]" (customInput)="rateInput($event)" name="limit" formControlName="limit"></app-price-input>-->
           <div class="wrap-input__line"></div>
         </div>
       </div>
@@ -146,6 +149,7 @@
                  (input)="quantityInput($event)"
                  name="quantityOf">
           <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
+          <!--<app-price-input [placeholder]="'Quantity of ' + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>-->
           <div class="wrap-input__line"></div>
         </div>
         <div class="wrap-input widget__input">
