--- a/src/app/dashboard/components/order-book/order-book.component.scss
+++ b/src/app/dashboard/components/order-book/order-book.component.scss
@@ -178,6 +178,9 @@
     &:last-child {
       border-bottom: 1px solid rgba(235,87,87,.7);
     }
+    &:first-child {
+      border-top: 1px solid rgba(235,87,87,.7);
+    }
   }
 
 
@@ -190,7 +193,10 @@
     background: linear-gradient(to right, rgba(0, 180, 60, .1) 0%, rgba(0, 180, 60, .1) 88%, rgba(0, 180, 60, 0) 100%);
     border-left: 1px solid rgba(0,180,61,.7);
     &:first-child {
-      border-top: rgba(0,180,61,.7);
+      border-top: 1px solid rgba(0,180,61,.7);
+    }
+    &:last-child {
+      border-bottom: 1px solid rgba(0,180,61,.7);
     }
   }
 }
