added chat reply message support and disables verification

--- a/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
@@ -2,15 +2,15 @@
 <div class="subtitle modal__subtitle">
   <p>Use Google Authenticator to scan the QRCode</p>
 </div>
-<!--<h3>{{statusMessage}}</h3>-->
+<h3>{{statusMessage}}</h3>
 
 <div class="modal__code-wrap">
 <img class="modal__qr-code" [src]="getGoogleAuthenticatorUrl()">
-<div class="modal__code-2fa">
-  <!--SECRET HASH-->
-  <h6>LSYVQZUJ6S2MRPA4 {{ secretCode }}</h6>
-  <span>Please save a backup of your <br> recovery key</span>
-</div>
+
+<!--SECRET HASH-->
+  <p>{{'Save a backup of your recovery key'}}</p>
+<div class="modal__row">
+  <div class="modal__code-grey-field">{{ secretCode }}</div>
 </div>
 
 <button class="btn btn--active btn--center" (click)="onNextStep()">Ok, I did it</button>
