--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -33,13 +33,13 @@
             Add Nickname
           </a>
         </li>
-        <li class="sidebar-menu__item">
-          <a class="sidebar-menu__link"
-             [routerLinkActive]="['sidebar-menu__link--active']"
-             [routerLink]="['/settings/verification']">
-            Identity verification
-          </a>
-        </li>
+        <!--<li class="sidebar-menu__item">-->
+          <!--<a class="sidebar-menu__link"-->
+             <!--[routerLinkActive]="['sidebar-menu__link&#45;&#45;active']"-->
+             <!--[routerLink]="['/settings/verification']">-->
+            <!--Identity verification-->
+          <!--</a>-->
+        <!--</li>-->
         <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
