--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -994,7 +994,7 @@
 
     }
     &__table-markets-mob {
-      thead {
+      thead, .markets__thead {
         background-color: rgba(255, 255, 255, .1);
       }
       .table__row-star {
