fix markerts, fix settings 2fa errors

--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -189,7 +189,7 @@
                   </svg>
                 </span>
             </div>
-            <div class="table__cell table__cell--p4" style="width: 100%;" (click)="onSelectCurrencyPair(pair)">
+            <div class="table__cell table__cell--p4" style="width: 100%;">
               <span>USD</span>
               <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
               <div class="txt-small txt-light-grey">Vol 34353453</div>
