--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -7,6 +7,7 @@
   <div class="row row--jcc">
     <div class="wrap-input modal__input-2fa">
       <input
+        required
         class="wrap-input__input"
         type="email"
         formControlName="email">
@@ -17,6 +18,7 @@
   <div class="row row--jcc">
     <div class="wrap-input modal__input-2fa">
       <input
+        required
         class="wrap-input__input"
         type="password"
         formControlName="password">
@@ -27,6 +29,7 @@
   <div class="row row--jcc">
     <div class="wrap-input modal__input-2fa">
       <input
+        required
         class="wrap-input__input"
         type="text"
         formControlName="pincode">
