added routing strategy

--- a/src/app/popups/two-factor-popup/google/google-disable/google-disable.component.html
+++ b/src/app/popups/two-factor-popup/google/google-disable/google-disable.component.html
@@ -70,5 +70,5 @@
     </div>
   </div>
 
-  <button class="btn btn--error btn--center ">Disable GA</button>
+  <button class="btn btn--error btn--center " [disabled]="!form.valid" (click)="disableGoogleAuth()">Disable GA</button>
 </form>
