add new fix in balance desktop

--- a/src/assets/scss/components/_page-title.scss
+++ b/src/assets/scss/components/_page-title.scss
@@ -27,6 +27,7 @@
   .page-title {
     padding: 0;
     flex-direction: row;
+    align-items: center;
     &__text{
       font-size: 36px;
       line-height: 42px;
