--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -21,7 +21,7 @@
       <div class="balance__filters">
         <div class="wrap-input wrap-input--with-icon balance__search-mob">
           <input class="wrap-input__input" type="text" required>
-          <label class="wrap-input__label" >Search</label>
+          <label class="wrap-input__label">Search</label>
           <div class="wrap-input__line"></div>
         </div>
         <span>Price in</span>
@@ -33,7 +33,7 @@
             <li class="dropdown__item">UAH</li>
           </ul>
         </div>
-        <label  class="toggler">
+        <label class="toggler">
           <input type="checkbox" name="">
           <span class="toggler__indicate"></span>
         </label>
@@ -87,7 +87,7 @@
     </table>
     <!--table-mob end-->
     <div class="balance__request-mob-link">
-      <span>5</span>Pending  requests
+      <span>5</span>Pending requests
       <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5.24264 0.757359L9.48528 5L5.24264 9.24264" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
@@ -97,7 +97,8 @@
     <div class="open-mob-balance" style="display: none;">
       <div class="open-mob-balance__header">
         <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
+          <path
+            d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
         </svg>
         to: All Balance
       </div>
@@ -186,7 +187,7 @@
             <div class="table__details-item">
               <div class="table__details-item-title">Txid</div>
               <div class="table__details-item-value">
-                <a href="#"class="open-mob-balance__code">e524e8d969b44d12c56d07fc14c748301762ecda6733bf56b3b35e77a6e405c1</a>
+                <a href="#" class="open-mob-balance__code">e524e8d969b44d12c56d07fc14c748301762ecda6733bf56b3b35e77a6e405c1</a>
               </div>
             </div>
             <div class="table__details-item">
@@ -233,7 +234,7 @@
         <div class="open-mob-balance__title">History</div>
         <div class="open-mob-balance__arr">
           <svg width="12" height="11" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M5.24264 0.757359L9.48528 5L5.24264 9.24264"stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M5.24264 0.757359L9.48528 5L5.24264 9.24264" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </div>
       </div>
@@ -249,7 +250,8 @@
         <h6>Pending Requests</h6>
         <span>
           <svg width="15" height="15" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.70711 0.292894C1.31658 -0.0976307 0.683419 -0.0976313 0.292894 0.292893C-0.0976307 0.683416 -0.0976313 1.31658 0.292893 1.70711L1.70711 0.292894ZM15.2929 16.7071C15.6834 17.0976 16.3166 17.0976 16.7071 16.7071C17.0976 16.3166 17.0976 15.6834 16.7071 15.2929L15.2929 16.7071ZM16.7071 1.70711C17.0976 1.31658 17.0976 0.683416 16.7071 0.292893C16.3166 -0.0976313 15.6834 -0.0976307 15.2929 0.292894L16.7071 1.70711ZM0.292921 15.2929C-0.097603 15.6834 -0.0976024 16.3166 0.292922 16.7071C0.683447 17.0976 1.31661 17.0976 1.70714 16.7071L0.292921 15.2929ZM0.292893 1.70711L7.79289 9.20712L9.20711 7.79291L1.70711 0.292894L0.292893 1.70711ZM7.79289 9.20712L15.2929 16.7071L16.7071 15.2929L9.20711 7.79291L7.79289 9.20712ZM15.2929 0.292894L7.79289 7.79291L9.20711 9.20712L16.7071 1.70711L15.2929 0.292894ZM7.79289 7.79291L0.292921 15.2929L1.70714 16.7071L9.20711 9.20712L7.79289 7.79291Z"/>
+            <path
+              d="M1.70711 0.292894C1.31658 -0.0976307 0.683419 -0.0976313 0.292894 0.292893C-0.0976307 0.683416 -0.0976313 1.31658 0.292893 1.70711L1.70711 0.292894ZM15.2929 16.7071C15.6834 17.0976 16.3166 17.0976 16.7071 16.7071C17.0976 16.3166 17.0976 15.6834 16.7071 15.2929L15.2929 16.7071ZM16.7071 1.70711C17.0976 1.31658 17.0976 0.683416 16.7071 0.292893C16.3166 -0.0976313 15.6834 -0.0976307 15.2929 0.292894L16.7071 1.70711ZM0.292921 15.2929C-0.097603 15.6834 -0.0976024 16.3166 0.292922 16.7071C0.683447 17.0976 1.31661 17.0976 1.70714 16.7071L0.292921 15.2929ZM0.292893 1.70711L7.79289 9.20712L9.20711 7.79291L1.70711 0.292894L0.292893 1.70711ZM7.79289 9.20712L15.2929 16.7071L16.7071 15.2929L9.20711 7.79291L7.79289 9.20712ZM15.2929 0.292894L7.79289 7.79291L9.20711 9.20712L16.7071 1.70711L15.2929 0.292894ZM7.79289 7.79291L0.292921 15.2929L1.70714 16.7071L9.20711 9.20712L7.79289 7.79291Z"/>
           </svg>
         </span>
       </div>
@@ -336,13 +338,15 @@
       <div class="open-mob-request__header">
         <div>
           <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
+            <path
+              d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
           </svg>
           to: Pending Requests
         </div>
         <span>
           <svg width="15" height="15" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.70711 0.292894C1.31658 -0.0976307 0.683419 -0.0976313 0.292894 0.292893C-0.0976307 0.683416 -0.0976313 1.31658 0.292893 1.70711L1.70711 0.292894ZM15.2929 16.7071C15.6834 17.0976 16.3166 17.0976 16.7071 16.7071C17.0976 16.3166 17.0976 15.6834 16.7071 15.2929L15.2929 16.7071ZM16.7071 1.70711C17.0976 1.31658 17.0976 0.683416 16.7071 0.292893C16.3166 -0.0976313 15.6834 -0.0976307 15.2929 0.292894L16.7071 1.70711ZM0.292921 15.2929C-0.097603 15.6834 -0.0976024 16.3166 0.292922 16.7071C0.683447 17.0976 1.31661 17.0976 1.70714 16.7071L0.292921 15.2929ZM0.292893 1.70711L7.79289 9.20712L9.20711 7.79291L1.70711 0.292894L0.292893 1.70711ZM7.79289 9.20712L15.2929 16.7071L16.7071 15.2929L9.20711 7.79291L7.79289 9.20712ZM15.2929 0.292894L7.79289 7.79291L9.20711 9.20712L16.7071 1.70711L15.2929 0.292894ZM7.79289 7.79291L0.292921 15.2929L1.70714 16.7071L9.20711 9.20712L7.79289 7.79291Z"/>
+            <path
+              d="M1.70711 0.292894C1.31658 -0.0976307 0.683419 -0.0976313 0.292894 0.292893C-0.0976307 0.683416 -0.0976313 1.31658 0.292893 1.70711L1.70711 0.292894ZM15.2929 16.7071C15.6834 17.0976 16.3166 17.0976 16.7071 16.7071C17.0976 16.3166 17.0976 15.6834 16.7071 15.2929L15.2929 16.7071ZM16.7071 1.70711C17.0976 1.31658 17.0976 0.683416 16.7071 0.292893C16.3166 -0.0976313 15.6834 -0.0976307 15.2929 0.292894L16.7071 1.70711ZM0.292921 15.2929C-0.097603 15.6834 -0.0976024 16.3166 0.292922 16.7071C0.683447 17.0976 1.31661 17.0976 1.70714 16.7071L0.292921 15.2929ZM0.292893 1.70711L7.79289 9.20712L9.20711 7.79291L1.70711 0.292894L0.292893 1.70711ZM7.79289 9.20712L15.2929 16.7071L16.7071 15.2929L9.20711 7.79291L7.79289 9.20712ZM15.2929 0.292894L7.79289 7.79291L9.20711 9.20712L16.7071 1.70711L15.2929 0.292894ZM7.79289 7.79291L0.292921 15.2929L1.70714 16.7071L9.20711 9.20712L7.79289 7.79291Z"/>
           </svg>
         </span>
       </div>
@@ -402,7 +406,8 @@
       <div class="request-status-info__header">
         <div>
           <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
+            <path
+              d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
           </svg>
           Request info
         </div>
@@ -449,81 +454,32 @@
       <h1 class="page-title__text">
         Balances
       </h1>
+      <div class="balance__your-active">
+        <h6 class="txt-grey">Estimated Holdings:</h6>
+        <div class="row">
+          <div class="balance__your-active-item">
+            <img src="../../assets/img/btc-icon-small.svg">
+            1.22764
+          </div>
+          <div class="balance__your-active-item">
+            <img src="../../assets/img/dollar-icon-small.svg">
+            43 522
+          </div>
+        </div>
+      </div>
       <button class="btn btn--active balance__title-btn">
         Refill balance
       </button>
-      <button class="btn btn--empty-blue balance__title-btn">
+      <button class="btn btn--empty-blue balance__title-btn" style="margin-left: 32px;">
         Send money
       </button>
     </div>
-    <!--request start-->
-    <!--<div class="balance__requests">-->
-      <!--<div class="balance__requests-header">-->
-        <!--<button class="btn btn&#45;&#45;center"><span>5</span> Pending requests</button>-->
-      <!--</div>-->
-      <!--&lt;!&ndash;table start&ndash;&gt;-->
-      <!--<table class="table">-->
-        <!--<thead>-->
-        <!--<tr>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Date</th>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Currency</th>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Amount</th>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Comission</th>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Payment system</th>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Status</th>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tac"></th>-->
-          <!--<th class="table__cell-head table__cell-head&#45;&#45;tac"></th>-->
-        <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody class="table__body">-->
-        <!--<tr class="table__row">-->
-          <!--<td class="table__cell">-->
-            <!--<div class="table__date-time">-->
-              <!--<div>Th 13.06.2018</div>-->
-              <!--<div>10:59:41</div>-->
-            <!--</div>-->
-          <!--</td>-->
-          <!--<td class="table__cell">-->
-            <!--<span>IDR</span>-->
-          <!--</td>-->
-          <!--<td class="table__cell table__cell&#45;&#45;tar">-->
-            <!--<span>0.01</span>-->
-          <!--</td>-->
-          <!--<td class="table__cell table__cell&#45;&#45;tar">-->
-            <!--<span>0</span>-->
-          <!--</td>-->
-          <!--<td class="table__cell table__cell&#45;&#45;tar">-->
-            <!--<span>CIMB NAGA</span>-->
-          <!--</td>-->
-          <!--<td class="table__cell table__cell&#45;&#45;tar">-->
-            <!--<span>Awaits payment</span>-->
-          <!--</td>-->
-          <!--<td class="table__cell">-->
-            <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">I paid</button>-->
-          <!--</td>-->
-          <!--<td class="table__cell table__cell&#45;&#45;tar">-->
-            <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">Revoke</button>-->
-            <!--<div class="revoke-request">-->
-              <!--<div class="revoke-request__title">Are you sure you want to revoke this request?</div>-->
-              <!--<div class="revoke-request__button-wrap">-->
-                <!--<button class="btn btn&#45;&#45;small">Yes</button>-->
-                <!--<button class="btn btn&#45;&#45;small">No</button>-->
-              <!--</div>-->
-              <!--<div class="revoke-request__triangle"></div>-->
-            <!--</div>-->
-          <!--</td>-->
-        <!--</tr>-->
-        <!--</tbody>-->
-      <!--</table>-->
-      <!--&lt;!&ndash;table end&ndash;&gt;-->
-    <!--</div>-->
-    <!--request end-->
     <!--filters start-->
     <form action="">
       <div class="balance__filters">
         <div class="wrap-input wrap-input--with-icon balance__search">
           <input class="wrap-input__input" type="text" required>
-          <label class="wrap-input__label" >Search</label>
+          <label class="wrap-input__label">Search</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -532,9 +488,17 @@
           </div>
           <div class="wrap-input__line"></div>
         </div>
-        <div class="balance__table-tabs">
-          <div class="balance__table-tabs-item balance__table-tabs-item--active">Main Balance</div>
-          <div class="balance__table-tabs-item">Pending requests <span class="indicate">5</span></div>
+        <div class="tabs balance__tabs">
+          <button class="tabs__item">
+            Crypto Balances
+          </button>
+          <button class="tabs__item">
+            Fiat Balances
+          </button>
+          <button class="tabs__item tabs__item--active">
+            <span>Pending requests</span>
+            <span class="indicate">5</span>
+          </button>
         </div>
         <div class="balance__hide-zero">
           <label for="" class="toggler">
@@ -544,7 +508,7 @@
           <span>Hide zero balances</span>
         </div>
         <div class="balance__show-all">
-          <label  class="toggler">
+          <label class="toggler">
             <input type="checkbox" name="">
             <span class="toggler__indicate"></span>
           </label>
