removed dummy secret code

--- a/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-two/google-step-two.component.html
@@ -8,7 +8,7 @@
 <img class="modal__qr-code" [src]="getGoogleAuthenticatorUrl()">
 <div class="modal__code-2fa">
   <!--SECRET HASH-->
-  <h6>LSYVQZUJ6S2MRPA4 {{ secretCode }}</h6>
+  <h6> {{ secretCode }}</h6>
   <span>Please save a backup of your <br> recovery key</span>
 </div>
 </div>
