--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -45,6 +45,7 @@
 @import "pages/login-registration";
 @import "pages/dashboard";
 @import "pages/balance";
+@import "pages/transaction";
 @import "pages/orders";
 @import "pages/referral";
 @import "pages/settings/settings";
